# quality-assurance-AI-system-testing

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENT_CLOSE_LOOP_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  HERMES_AGENT_INSTALL.md  PROJECT_BOUNDARY.md  QUALITY_PILOT_UX_HARDENING_TASKS.md  README.md  SECURITY.md  SWQA_TEST_DESIGN.md
src/qa_aist/: __init__.py  case_generation.py  cli.py  config.py  contracts.py  fix_issues.py  gitea.py  hermes.py  hermes_mcp.py  issues.py  pipeline.py  policy_pack.py  publishing.py  redmine.py  reports.py  runner.py  templates.py  wiki.py  write_gate.py
src/qa_aist/template_files/project/: qa-aist.yaml
src/qa_aist/template_files/project/reports/: status-template.md
src/qa_aist/template_files/project/rules/: swqa-test-design.md
src/qa_aist/template_files/project/runners/: example-runner.sh
src/quality_pilot/: __init__.py  automation_profile.py  case_generation.py  cli.py  command_policy.py  config.py  contracts.py  fix_issues.py  gitea.py  gitea_ledger.py  heartbeat.py  hermes.py  hermes_mcp.py  issues.py  pipeline.py  policy_pack.py  publishing.py  redmine.py  reports.py  runner.py  runtime_profile.py  state_audit.py  subagents.py  templates.py  ux.py  wiki.py
src/quality_pilot/template_files/project/: quality-pilot.yaml
src/quality_pilot/template_files/project/cases/: example-contract.yaml
src/quality_pilot/template_files/project/rules/: swqa-test-design.md
templates/project/: qa-aist.yaml  quality-pilot.yaml
templates/project/cases/: example-contract.yaml
templates/project/reports/: status-template.md
templates/project/rules/: swqa-test-design.md
templates/project/runners/: example-runner.sh
tests/: test_cli.py  test_config.py  test_contracts.py  test_hermes.py  test_lifecycle.py  test_runner_pipeline.py  test_state_audit.py  test_ux_hardening.py
