[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-aist"
version = "0.1.0"
description = "Reusable deterministic-first QA closed-loop toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QA-AIST contributors"}]
keywords = ["qa", "testing", "automation", "closed-loop", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
qa-aist = "qa_aist.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
