[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-aist"
version = "0.1.0"
description = "Reusable deterministic-first QA closed-loop toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QA-AIST contributors"}]
keywords = ["qa", "testing", "automation", "closed-loop", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
qa-aist = "qa_aist.cli:main"
qa-aist-hermes = "qa_aist.hermes:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qa_aist = ["py.typed", "template_files/project/**/*"]
