[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-pilot"
version = "0.1.0"
description = "Reusable deterministic-first QA closed-loop toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AI Quality Pilot contributors"}]
keywords = ["qa", "testing", "automation", "closed-loop", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
quality-pilot = "quality_pilot.cli:main"
quality-pilot-hermes = "quality_pilot.hermes:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quality_pilot = ["py.typed", "template_files/project/**/*"]
